ajout tous les endpoints utilisateurs
